fix margin collapse and some starter css

--- a/estore-ui/src/app/app.component.css
+++ b/estore-ui/src/app/app.component.css
@@ -1,1 +1,5 @@
 /* Add any other CSS Styles required */
+:host {
+  width: 100vw;
+  height: 100vh;
+}
