--- a/estore-ui/src/app/components/keyboard-detail/keyboard-detail.component.css
+++ b/estore-ui/src/app/components/keyboard-detail/keyboard-detail.component.css
@@ -1,11 +1,3 @@
-:host {
-  display: flex;
-  flex-direction: column;
-
-  height: -webkit-fill-available;
-  height: -moz-available;
-}
-
 .content {
   display: flex;
   justify-content: center;
